--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,9 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+remappings = [
+    "@chainlink/contracts-ccip/=lib/ccip/contracts/",
+    "@chainlink-brownie-contracts=lib/chainlink-brownie-contracts",
+]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
