--- a/foundry.toml
+++ b/foundry.toml
@@ -5,6 +5,7 @@ libs = ["lib"]
 remappings = [
     "@chainlink/contracts-ccip/=lib/ccip/contracts/",
     "@chainlink-brownie-contracts=lib/chainlink-brownie-contracts",
+    "@ens-namehash/contracts=lib/ens-namehash/contracts"
 ]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
